--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@sitespring/datamodel",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "description": "Базовые классы для работы с данными: Model, Store, Proxy",
     "main": "index.js",
     "scripts": {
@@ -12,7 +12,9 @@
     "private": true,
     "license": "Commercial",
     "files": [
-        "src"
+        "src",
+        "lib",
+        "docs"
     ],
     "dependencies": {
         "@babel/preset-env": "^7.15.8",
