--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@sitespring/datamodel",
-    "version": "2.1.1",
+    "version": "2.1.2",
     "description": "Базовые классы для работы с данными: Model, Store, Proxy",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "test": "jest",
         "docs": "npx jsdoc src -d docs",
