--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "@sitespring/datamodel",
-    "version": "2.1.2",
+    "version": "2.1.3",
     "description": "Базовые классы для работы с данными: Model, Store, Proxy",
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "jest",
+        "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
         "docs": "npx jsdoc src -d docs",
         "build": "babel src -d lib"
     },
@@ -19,20 +19,22 @@
         "index.lib.js"
     ],
     "dependencies": {
-        "@babel/preset-env": "^7.15.8",
-        "axios": "^0.23.0",
+        "@babel/preset-env": "^7.21.5",
+        "axios": "^1.4.0",
         "babel": "^6.23.0",
-        "dayjs": "^1.10.8",
-        "lodash": "^4.17.21",
+        "cross-env": "^7.0.3",
+        "dayjs": "^1.11.7",
+        "lodash-es": "^4.17.21",
         "mitt": "^3.0.0",
         "validate.js": "^0.13.1"
     },
     "devDependencies": {
-        "@babel/cli": "^7.17.6",
-        "@babel/core": "^7.17.8",
-        "babel-jest": "^27.2.5",
-        "jest": "^27.2.5",
-        "jsdoc": "^3.6.10",
-        "ts-jest": "^27.0.6"
+        "@babel/cli": "^7.21.5",
+        "@babel/core": "^7.21.8",
+        "@jest/globals": "^29.5.0",
+        "babel-jest": "^29.5.0",
+        "jest": "^29.5.0",
+        "jsdoc": "^4.0.2",
+        "ts-jest": "^29.1.0"
     }
 }
