--- a/babel.config.json
+++ b/babel.config.json
@@ -6,7 +6,7 @@
                 "targets": {
                     "node": "current"
                 },
-                "modules": true
+                "modules": "auto"
             }
         ]
     ]
