--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "index.lib.js"
     ],
     "dependencies": {
-        "@babel/preset-env": "^7.21.5",
         "axios": "^1.4.0",
         "babel": "^6.23.0",
         "cross-env": "^7.0.3",
@@ -29,12 +28,12 @@
         "validate.js": "^0.13.1"
     },
     "devDependencies": {
-        "@babel/cli": "^7.21.5",
+        "@babel/preset-env": "^7.21.5",
+        "@babel/cli": "^7.6.4",
         "@babel/core": "^7.21.8",
         "@jest/globals": "^29.5.0",
         "babel-jest": "^29.5.0",
         "jest": "^29.5.0",
-        "jsdoc": "^4.0.2",
-        "ts-jest": "^29.1.0"
+        "jsdoc": "^4.0.2"
     }
 }
