--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@sitespring/datamodel",
-    "version": "2.3.1",
+    "version": "3.0.0",
     "description": "Базовые классы для работы с данными: Model, Store, Proxy",
     "main": "index.js",
     "type": "module",
@@ -16,7 +16,7 @@
         "src",
         "lib",
         "docs",
-        "index.lib.js"
+        "index.js"
     ],
     "dependencies": {
         "axios": "^1.4.0",
