update some deps + index import

--- a/babel.config.json
+++ b/babel.config.json
@@ -9,5 +9,12 @@
                 "modules": "auto"
             }
         ]
-    ]
+    ],
+    "env": {
+        "test": {
+            "plugins": [
+                "@babel/plugin-transform-modules-commonjs"
+            ]
+        }
+    }
 }
