--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
         "index.js"
     ],
     "dependencies": {
-        "axios": "^1.4.0",
-        "babel": "^6.23.0",
+        "axios": "^1.7.7",
         "cross-env": "^7.0.3",
-        "dayjs": "^1.11.7",
+        "dayjs": "^1.11.13",
         "lodash-es": "^4.17.21",
-        "mitt": "^3.0.0",
+        "mitt": "^3.0.1",
         "validate.js": "^0.13.1"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.21.5",
-        "@babel/cli": "^7.6.4",
-        "@babel/core": "^7.21.8",
-        "@jest/globals": "^29.5.0",
-        "babel-jest": "^29.5.0",
-        "jest": "^29.5.0",
-        "jsdoc": "^4.0.2"
+        "@babel/cli": "^7.25.9",
+        "@babel/core": "^7.26.0",
+        "@babel/plugin-transform-modules-commonjs": "^7.25.9",
+        "@babel/preset-env": "^7.26.0",
+        "@jest/globals": "^29.7.0",
+        "babel-jest": "^29.7.0",
+        "jest": "^29.7.0",
+        "jsdoc": "^4.0.4"
     }
 }
